buildscript {
    ext {
        springBootVersion = '2.0.2.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.github.spartusch'
version = '1.1.0-SNAPSHOT'

sourceCompatibility = 10

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compile 'org.springframework.boot:spring-boot-starter-webflux'
    compile 'org.apache.httpcomponents:fluent-hc:4.5.5'
    // Monitoring
    compile 'org.springframework.boot:spring-boot-starter-actuator'
    compile 'io.micrometer:micrometer-registry-prometheus:latest.release'
    // Caching
    compile 'org.springframework.boot:spring-boot-starter-cache'
    compile 'com.github.ben-manes.caffeine:caffeine:2.6.2'
    // Custom
    compile 'com.github.spartusch:excel-web-query:1.0-SNAPSHOT'

    testCompile 'org.springframework.boot:spring-boot-starter-test'
    testCompile 'com.github.tomakehurst:wiremock-standalone:2.17.0'
    testCompile 'io.projectreactor:reactor-test'
}

test {
    testLogging {
        events "started", "skipped", "failed"
    }
}
